--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,9 +2,6 @@
  * #style.css
 \*-----------------------------------*/
 
-/**
- * copyright 2022 codewithsadee
- */
 
 
 
@@ -332,8 +329,8 @@ header .container {
 }
 
 .card-icon {
-  color: var(--bittersweet);
-  font-size: 45px;
+  color: var(--platinum);
+  font-size: 35px;
   width: max-content;
   margin-inline: auto;
   margin-bottom: 15px;
@@ -513,7 +510,7 @@ textarea {
  * #FOOTER
 \*-----------------------------------*/
 
-footer { background: var(--white-2); }
+footer { background: var(--back-ground-color); }
 
 .footer-top { padding: 80px 0 50px; }
 
@@ -526,7 +523,12 @@ footer { background: var(--white-2); }
   }
 
 
-footer .logo { margin-bottom: 30px; }
+footer .logo { 
+  margin-bottom: 30px;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+}
 
 .footer-text {
   color: var(--rythm);
@@ -537,7 +539,7 @@ footer .logo { margin-bottom: 30px; }
 
 .social-list {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   gap: 20px;
 }
 
@@ -621,6 +623,20 @@ footer .logo { margin-bottom: 30px; }
 /*-----------------------------------*\ 
  * #RESPONSIVE
 \*-----------------------------------*/
+/**
+*responsive for smaller than 450px
+**/
+@media (max-width: 450px){
+
+
+  /**
+  *CUSTOM STYLES
+  */  
+
+  
+}
+
+
 
 /**
  * responsive for larger than 450px 
@@ -642,7 +658,24 @@ footer .logo { margin-bottom: 30px; }
 
   }
 
-
+  
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 20px;
+  }
+  .title-box{
+    height: 90px;
+    width:100%;
+    margin-bottom:10px;
+    display: flex;
+    flex-flow: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 12px 10px 40px;
+    border-radius: 16px 100px 100px 16px;
+    text-transform: uppercase;
+  }
 
   /**
    * REUESED STYLE 
@@ -754,7 +787,11 @@ footer .logo { margin-bottom: 30px; }
     margin-inline: auto;
   }
 
+  /***
+  *CUSTOM STYLES
+  **/
 
+  /*  */
 
   /**
    * HEADER
@@ -825,6 +862,24 @@ footer .logo { margin-bottom: 30px; }
   }
 
 
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+  }
+  .title-box{
+    height: 90px;
+    width:110%;
+    margin-bottom:10px;
+    display: flex;
+    flex-flow: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 12px 10px 40px;
+    border-radius: 16px 100px 100px 16px;
+    text-transform: uppercase;
+  }
+  
 
   /**
    * REUSED STYLE
@@ -876,6 +931,27 @@ footer .logo { margin-bottom: 30px; }
 
   .container { max-width: 950px; }
 
+  /***
+  *CUSTOM STYLES
+  **/
+
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+  }
+  .title-box{
+    height: 90px;
+    width:125%;
+    margin-bottom:10px;
+    display: flex;
+    flex-flow: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 12px 10px 50px;
+    border-radius: 16px 100px 100px 16px;
+    text-transform: uppercase;
+  }
 
 
   /**
@@ -940,7 +1016,7 @@ footer .logo { margin-bottom: 30px; }
     margin-inline: auto;
   }
 
-  .about-list { grid-template-columns: repeat(3, 1fr); }
+  .about-list { grid-template-columns: repeat(2, 1fr); }
 
   .about-bottom {
     display: flex;
@@ -1101,4 +1177,93 @@ footer .logo { margin-bottom: 30px; }
 
   .features :is(.section-title, .section-text) { max-width: 850px; }
 
+}
+
+/***
+*CUSTOM STYLE
+*/
+button a{
+  color: var(--white);
+}
+.inverted{
+  color:var(--bittersweet)
+}
+.header-text {
+  font-size: 2rem;
+  margin-bottom: 40px;
+}
+
+.highlight-marketing {
+  text-decoration: underline wavy red;
+}
+
+.highlight-content {
+  text-decoration: underline wavy blue;
+}
+
+
+
+.z-index10{
+  z-index: 10;
+}
+.z-index15{
+  z-index:15;
+}
+.z-index20{
+  z-index:20;
+}
+.z-index25{
+  z-index:25;
+}
+.box {
+  border-radius: 10px;
+}
+
+.content-box{
+  padding:24px;
+  border-radius:10px;
+  height: 275px;
+}
+.content-box ul{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-content: flex-start;
+}
+.content-box ul li {
+  text-align: left;
+  text-transform: capitalize;
+}
+.research {
+  background-color: var(--royal-blue-dark);
+  color: var(--platinum);
+}
+
+.create {
+  background-color: #3498DB;
+  color: var(--platinum);
+}
+
+.distribute{
+  background-color: #ECF0F1;
+  color: #333;
+}
+.distribute ion-icon{
+  color: var(--back-ground-color);
+}
+.optimize {
+  background-color: #5DADE2;
+  color: var(--platinum);
+}
+
+.box h2 {
+  font-size: 1.2rem;
+  margin-bottom: 10px;
+}
+
+.box ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  line-height: 1.6;
 }
